--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,17 +7,13 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -35,4 +31,73 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.chat-body {
+  border: 5px solid black;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.chat-messages {
+  flex-grow: 1;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.chat-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.chat-form input {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.chat-form button {
+  flex-grow: 0;
+}
+
+.message {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+}
+
+.message .message-username {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.message .message-body {
+  flex-grow: 1;
+}
+
+.message .message-timestamp {
+  font-size: 10px;
+  margin-left: 10px;
+}
+
+.message .message-timestamp::before {
+  content: "(";
+}
+
+.message .message-timestamp::after {
+  content: ")";
+}
+
+.message .message-timestamp::before,
+.message .message-timestamp::after {
+  color: gray;
 }
